# ScreenPy

./: .gitignore  CASABLANCA.txt  MIGRATION.md  Mackerick.txt  PARADOX.txt  README.md  VSD_crawler.py  VSD_frame_dict_by_genre  VSD_stats.py  clockdeco.py  genre_stats.txt  genre_stats.xlsx  genre_stats_new.txt  indianajonesandtheraidersofthelostark.json  matrix_sample.json  moviescript_crawler.py  parser_errors.txt  parsing_stats.py  pyproject.toml  requirements.txt  screenpile.py  screenpy.py  screenpy_tests.py  screenpy_vars.py  segment_instance_extraction.py  test_installation.py  western_genre_breakdown.xlsx
VSD_genre/: VSD_frame_dict_by_genre_Action.txt  VSD_frame_dict_by_genre_Animation.txt  VSD_frame_dict_by_genre_Drama.txt  VSD_frame_dict_by_genre_Family.txt  VSD_frame_dict_by_genre_Film-Noir.txt  VSD_frame_dict_by_genre_Horror.txt  VSD_frame_dict_by_genre_Sci-Fi.txt  VSD_frame_dict_by_genre_Thriller.txt  VSD_frame_dict_by_genre_War.txt  VSD_frame_dict_by_genre_Western.txt
data/: 310toYuma.txt  indianajonesandtheraidersofthelostark.json  requirements.txt  stagecoach.txt
examples/: __init__.py  parse_screenplay.py
legacy/: screenpile.py  screenpy_tests.py  sentence_parser.py  sentence_splitter.py
parsed_output/: 15minutes.json  2012.json  30minutesorless.json  48hrs..json  abovethelaw.json  abyssthe.json  airforceone.json  alien.json  alien3.json  alienresurrection.json  aliens.json  alienvs.predator.json  aloneinthedark.json  americanshaolinkingofkickboxersii.json  apocalypsenow.json  arcticblue.json  armageddon.json  armyofdarkness.json  assassins.json  austinpowersinternationalmanofmystery.json  austinpowersthespywhoshaggedme.json  avatar.json  avengersthe.json  avengersthe2012.json  backdraft.json  badboys.json  badcountry.json  batman.json  batman2.json  battlelosangeles.json  blackrain.json  blade.json  bladeii.json  bladerunner.json  bladetrinity.json  bookofelithe.json  boondocksaints2allsaintsday.json  bountyhunterthe.json  bourneidentitythe.json  bourneultimatumthe.json  (+250 more)
tests/: __init__.py  test_parser.py
verb_sense/: VSD.py  VSD_withSpacy.py  (+11 more)
(+7293 files in other folders)
