[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenpy"
version = "2.0.0"
description = "Automated screenplay parsing and storytelling knowledge extraction"
readme = "README.md"
authors = [
    {name = "David R. Winer", email = "drwiner@cs.utah.edu"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyparsing>=3.0.0",
    "spacy>=3.0.0",
    "sense2vec>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.0.0",
]
nlp = [
    "transformers>=4.20.0",
    "torch>=1.10.0",
]

[project.scripts]
screenpy = "screenpy.cli:main"

[project.urls]
Homepage = "https://github.com/drwiner/ScreenPy"
Documentation = "https://screenpy.readthedocs.io"
Repository = "https://github.com/drwiner/ScreenPy"
Issues = "https://github.com/drwiner/ScreenPy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=screenpy --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true